# x/spolu/dfs/server/src/api.rs
@@ -52,6 +52,9 @@ pub fn router(state: ApiState) -> Router {
         .route("/objects/list", post(objects::list))
         .route("/objects/mkdir", post(objects::mkdir))
         .route("/objects/update", post(objects::update))
+        .route("/objects/rename", post(objects::rename))
+        .route("/objects/unlink", post(objects::unlink))
+        .route("/objects/rmdir", post(objects::rmdir))
         .route("/objects/grants/list", post(grants::list))
         .route("/objects/grants/update", post(grants::update))
         .layer(DefaultBodyLimit::max(64 * 1024))
